# orders-management-system

./: .env_example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
order_management/: asgi.py  settings.py  urls.py  wsgi.py
orders/: forms.py  models.py  urls.py  views.py
orders/api/: api_views.py  serializers.py  urls.py
orders/fixtures/: orders.json
orders/migrations/: 0001_initial.py
orders/services/: order_service.py
orders/tests/: conftest.py  test_api_views.py  test_views.py
templates/: base.html
templates/orders/: order_create.html  order_list.html  order_update.html  revenue.html  revenue_report.html
